# dsde-2025-project

./: .gitignore  README.md  initialize_table.sql  main.py  pyproject.toml
app/: database.py  main.py
app/lib/: rag_engine.py
app/pages/: affiliations.py  author_profile.py  chat.py  faculty.py  home.py  paper_info.py  papers.py  test.py
csv_test/: affiliations.csv  authors.csv  funding_agencies.csv  keywords.csv  paper_author_affiliations.csv  paper_authors.csv  paper_funding.csv  paper_keywords.csv  paper_subject_areas.csv  papers.csv  reference_papers.csv  sources.csv  subject_areas.csv
processing/: README.md  calculate_embedding_to_db.py  create_test_csv.py  csv_exporter.py  csv_to_db_loader.py  handler.py  json_to_csv.py  load_csv_to_db.py  upload_data.py  upload_to_database.py  verify_db.py
processing/lib/: csv_to_db_loader.py  embedder.py
